Changes according to spec
