# src/responses/collection_response.go
@@ -1,0 +1,7 @@
+package responses
+
+type TravelSampleResponse struct {
+	Status         int         `json:"status"`
+	Message        string      `json:"message"`
+	CollectionData interface{} `json:"data"`
+}
